<resources>
    <string name="app_name">MSM MESS</string>
    <string name="text_str">text change</string>
    <string name="AddnameText">Give your Name</string>
    <string name="nameEditText">Name</string>
    <string name="add_Btn">Add me</string>
    <string name="LunchText">Lunch</string>
    <string name="BreakfastText">Breakfast</string>
    <string name="DinnerText">Dinner</string>
    <string name="YesStr">Yes</string>
    <string name="NoStr">No</string>
    <string name="ChooseStr">Choose</string>
    <string name="statusStr">Submit Status</string>
    <string name="bkfs">  B  R  E  A  K  F  A  S  T</string>
    <string name="Lnch">  L  U  N  C  H</string>
    <string name="Dnnr">  D  I  N  N  E  R</string>

</resources>
