<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ChooseStr"
            android:textAppearance="?textAppearanceLargePopupMenu"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/YesId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/YesStr"
            android:textAppearance="?textAppearanceLargePopupMenu"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NoStr"
            android:textAppearance="?textAppearanceLargePopupMenu"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/BreakfastText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BreakfastText"
            android:textAppearance="?textAppearanceSmallPopupMenu" />

        <RadioGroup
            android:id="@+id/rg_bkfs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_bkfs_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <RadioButton
                android:id="@+id/rb_bkfs_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/LunchText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LunchText"
            android:textAppearance="?textAppearanceSmallPopupMenu" />

        <RadioGroup
            android:id="@+id/rg_lnch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_lnch_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <RadioButton
                android:id="@+id/rb_lnch_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/DinnerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DinnerText"
            android:textAppearance="?textAppearanceSmallPopupMenu" />

        <RadioGroup
            android:id="@+id/rg_dnnr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_dnnr_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <RadioButton
                android:id="@+id/rb_dnnr_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sbtButton"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/statusStr"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>